crates/ty_python_semantic/resources/mdtest/snapshots/mro.md_-_Method_Resolution_Order_tests_-_`__bases__`_lists_with_duplicate_bases.snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---
---
mdtest name: mro.md - Method Resolution Order tests - `__bases__` lists with duplicate bases
mdtest path: crates/ty_python_semantic/resources/mdtest/mro.md
---

# Python source files

## mdtest_snippet.py

```
 1 | from typing_extensions import reveal_type
 2 | 
 3 | class Foo(str, str): ...  # error: [duplicate-base] "Duplicate base class `str`"
 4 | 
 5 | reveal_type(Foo.__mro__)  # revealed: tuple[<class 'Foo'>, Unknown, <class 'object'>]
 6 | 
 7 | class Spam: ...
 8 | class Eggs: ...
 9 | class Bar: ...
10 | class Baz: ...
11 | 
12 | # fmt: off
13 | 
14 | # error: [duplicate-base] "Duplicate base class `Spam`"
15 | # error: [duplicate-base] "Duplicate base class `Eggs`"
16 | class Ham(
17 |     Spam,
18 |     Eggs,
19 |     Bar,
20 |     Baz,
21 |     Spam,
22 |     Eggs,
23 | ): ...
24 | 
25 | # fmt: on
26 | 
27 | reveal_type(Ham.__mro__)  # revealed: tuple[<class 'Ham'>, Unknown, <class 'object'>]
28 | 
29 | class Mushrooms: ...
30 | class Omelette(Spam, Eggs, Mushrooms, Mushrooms): ...  # error: [duplicate-base]
31 | 
32 | reveal_type(Omelette.__mro__)  # revealed: tuple[<class 'Omelette'>, Unknown, <class 'object'>]
```

# Diagnostics

```
info: revealed-type: Revealed type
 --> src/mdtest_snippet.py:5:1
  |
3 | class Foo(str, str): ...  # error: [duplicate-base] "Duplicate base class `str`"
4 |
5 | reveal_type(Foo.__mro__)  # revealed: tuple[<class 'Foo'>, Unknown, <class 'object'>]
  | ^^^^^^^^^^^^^^^^^^^^^^^^ `tuple[<class 'Foo'>, Unknown, <class 'object'>]`
6 |
7 | class Spam: ...
  |

```

```
info: revealed-type: Revealed type
  --> src/mdtest_snippet.py:27:1
   |
25 | # fmt: on
26 |
27 | reveal_type(Ham.__mro__)  # revealed: tuple[<class 'Ham'>, Unknown, <class 'object'>]
   | ^^^^^^^^^^^^^^^^^^^^^^^^ `tuple[<class 'Ham'>, Unknown, <class 'object'>]`
28 |
29 | class Mushrooms: ...
   |

```

```
info: revealed-type: Revealed type
  --> src/mdtest_snippet.py:32:1
   |
30 | class Omelette(Spam, Eggs, Mushrooms, Mushrooms): ...  # error: [duplicate-base]
31 |
32 | reveal_type(Omelette.__mro__)  # revealed: tuple[<class 'Omelette'>, Unknown, <class 'object'>]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `tuple[<class 'Omelette'>, Unknown, <class 'object'>]`
   |

```

```
error: lint:duplicate-base: Duplicate base class `str`
 --> src/mdtest_snippet.py:3:7
  |
1 | from typing_extensions import reveal_type
2 |
3 | class Foo(str, str): ...  # error: [duplicate-base] "Duplicate base class `str`"
  |       ^^^^^^^^^^^^^
4 |
5 | reveal_type(Foo.__mro__)  # revealed: tuple[<class 'Foo'>, Unknown, <class 'object'>]
  |
info: The definition of class `Foo` will raise `TypeError` at runtime
 --> src/mdtest_snippet.py:3:11
  |
1 | from typing_extensions import reveal_type
2 |
3 | class Foo(str, str): ...  # error: [duplicate-base] "Duplicate base class `str`"
  |           ---  ^^^ Class `str` later repeated here
  |           |
  |           Class `str` first included in bases list here
4 |
5 | reveal_type(Foo.__mro__)  # revealed: tuple[<class 'Foo'>, Unknown, <class 'object'>]
  |
info: `lint:duplicate-base` is enabled by default

```

```
error: lint:duplicate-base: Duplicate base class `Spam`
  --> src/mdtest_snippet.py:16:7
   |
14 |   # error: [duplicate-base] "Duplicate base class `Spam`"
15 |   # error: [duplicate-base] "Duplicate base class `Eggs`"
16 |   class Ham(
   |  _______^
17 | |     Spam,
18 | |     Eggs,
19 | |     Bar,
20 | |     Baz,
21 | |     Spam,
22 | |     Eggs,
23 | | ): ...
   | |_^
24 |
25 |   # fmt: on
   |
info: The definition of class `Ham` will raise `TypeError` at runtime
  --> src/mdtest_snippet.py:17:5
   |
15 | # error: [duplicate-base] "Duplicate base class `Eggs`"
16 | class Ham(
17 |     Spam,
   |     ---- Class `Spam` first included in bases list here
18 |     Eggs,
19 |     Bar,
20 |     Baz,
21 |     Spam,
   |     ^^^^ Class `Spam` later repeated here
22 |     Eggs,
23 | ): ...
   |
info: `lint:duplicate-base` is enabled by default

```

```
error: lint:duplicate-base: Duplicate base class `Eggs`
  --> src/mdtest_snippet.py:16:7
   |
14 |   # error: [duplicate-base] "Duplicate base class `Spam`"
15 |   # error: [duplicate-base] "Duplicate base class `Eggs`"
16 |   class Ham(
   |  _______^
17 | |     Spam,
18 | |     Eggs,
19 | |     Bar,
20 | |     Baz,
21 | |     Spam,
22 | |     Eggs,
23 | | ): ...
   | |_^
24 |
25 |   # fmt: on
   |
info: The definition of class `Ham` will raise `TypeError` at runtime
  --> src/mdtest_snippet.py:18:5
   |
16 | class Ham(
17 |     Spam,
18 |     Eggs,
   |     ---- Class `Eggs` first included in bases list here
19 |     Bar,
20 |     Baz,
21 |     Spam,
22 |     Eggs,
   |     ^^^^ Class `Eggs` later repeated here
23 | ): ...
   |
info: `lint:duplicate-base` is enabled by default

```

```
error: lint:duplicate-base: Duplicate base class `Mushrooms`
  --> src/mdtest_snippet.py:30:7
   |
29 | class Mushrooms: ...
30 | class Omelette(Spam, Eggs, Mushrooms, Mushrooms): ...  # error: [duplicate-base]
   |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
31 |
32 | reveal_type(Omelette.__mro__)  # revealed: tuple[<class 'Omelette'>, Unknown, <class 'object'>]
   |
info: The definition of class `Omelette` will raise `TypeError` at runtime
  --> src/mdtest_snippet.py:30:28
   |
29 | class Mushrooms: ...
30 | class Omelette(Spam, Eggs, Mushrooms, Mushrooms): ...  # error: [duplicate-base]
   |                            ---------  ^^^^^^^^^ Class `Mushrooms` later repeated here
   |                            |
   |                            Class `Mushrooms` first included in bases list here
31 |
32 | reveal_type(Omelette.__mro__)  # revealed: tuple[<class 'Omelette'>, Unknown, <class 'object'>]
   |
info: `lint:duplicate-base` is enabled by default

```
